--- a/404.html
+++ b/404.html
@@ -96,8 +96,9 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-2344">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-text u-text-default u-text-1">Uh-oh! You went somewhere that doesn't exist. In the mean time, check out this picture of a cat!</p>
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <p class="u-text u-text-default u-text-1">Uh-oh! You went somewhere that doesn't exist. In the mean time, check out this picture of a cat!<br><b>You will be redirected to the homepage in 5 seconds.</b>
+        </p>
         <img src="images/cat.jpg" alt="" class="u-image u-image-default u-image-1" data-image-width="2370" data-image-height="1927">
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <meta http-equiv="refresh" content="5; url=index.html">
