--- a/Brawl-Stars.html
+++ b/Brawl-Stars.html
@@ -43,7 +43,7 @@
             <ul class="u-nav u-text-body-color u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Technology.html" style="padding: 10px 20px;">Technology</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Shortcuts.html">Shortcuts</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Javascript.html">Javascript</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Cad.html">Cad</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Cad.html">CAD</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-1 u-button-style u-custom-color-1 u-hover-custom-color-1 u-nav-link u-text-active-white u-text-body-color u-text-hover-grey-15" href="Activities.html" style="padding: 10px 20px;">Activities</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Rock-Climbing.html">Rock Climbing</a>
@@ -70,7 +70,7 @@
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-7"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Technology.html" style="padding: 10px 20px;">Technology</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Shortcuts.html">Shortcuts</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Javascript.html">Javascript</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Cad.html">Cad</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Cad.html">CAD</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Activities.html" style="padding: 10px 20px;">Activities</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-9"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Rock-Climbing.html">Rock Climbing</a>
@@ -165,7 +165,7 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-94e1"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-94e1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-clearfix u-custom-html u-expanded-width u-custom-html-1">
           <center>
             <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">
@@ -174,6 +174,7 @@
             <br>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
           </center>
         </div>
+        <p class="u-text u-text-default u-text-1">Website made by Timothy with Nicepage and Github Pages.</p>
       </div></footer>
   </body>
 </html>
