Simplification, Mouse Cursor

--- a/html.html
+++ b/html.html
@@ -29,14 +29,10 @@
         }
     </style>
     <body>
-        <h1 class="head">Minecraft</h1>
-        <p>When I have time to play Minecraft (which because of school is rarely) I like to play with command block, scoreboard commands, datapacks, and more. I also like building normal things, especially with world edit.</p>
-        <h1>Commands</h1>
-        <h2>Custom commands with the /trigger command</h2>
-        <p>Tutorial comming later...</p>
-        <h1>Building</h2>
-        <h2>Road System</h2>
-        <p>Images/Download comming later...</p>
+        <h1 class="head">Home</h1>
+        <p>Welcome to my HTML testing page. This is where test out different things that I can do with static html/css. I may also use javascript.</p><br>
+        <h1>Custom mouse cursor</h1>
+        <p>The first thing you probably notices was the custom mouse cursor. (more info comming later)</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
