--- a/index.html
+++ b/index.html
@@ -9,50 +9,28 @@
         <center><div class='menubar'>
             <a href="index.html" class="droplink">Home</a>
             <div class="dropdown">
-                <button class="dropbtn"><a href="technology.html" class="droplink">Technology ▾</a></button>
+                <button class="dropbtn"><a href="html.html" class="droplink">HTML Testing ▾</a></button>
                 <div class="dropdown-content">
-                    <a href="shortcuts.html">Shortcuts</a>
-                    <a href="javascript.html">Javascript</a>
-                    <a href="cad.html">CAD</a>
+                    <a href="#">Test</a>
+                    <a href="#">Drop</a>
+                    <a href="#">Down</a>
+                    <a href="https://www.example.com">Example Link</a>
                 </div>
             </div>
-            <div class="dropdown">
-                <button class="dropbtn"><a href="activities.html" class="droplink">Activities ▾</a></button>
-                <div class="dropdown-content">
-                    <a href="rockclimbing.html"> Rock Climbing</a>
-                    <a href="minecraft.html">Minecraft</a>
-                    <a href="brawlstars.html">Brawl Stars</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn"><a href="school.html" class="droplink">School ▾</a></button>
-                <div class="dropdown-content">
-                    <a href="math.html">Math</a>
-                    <a href="literature.html">Literature</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn"><a href="friends.html" class="droplink">Friends ▾</a></button>
-                <div class="dropdown-content">
-                    <a href="sitebuttons.html">Site Buttons</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn"><a href="contact.html" class="droplink">Contact ▾</a></button>
-                <div class="dropdown-content">
-                  <a href="comment.html">Comment</a>
-                  <a href="pm.html">Private Message</a>
-                </div>
-            </div>
+            <a href="minecraft.html" class="droplink">Minecraft</a>
         </div></center>
     </head>
+    <style>
+        html {
+            cursor: url("media/cursor.png") 32 10, auto;
+        }
+        a{
+            cursor: url("media/select.png") 32 10, auto;
+        }
+    </style>
     <body>
         <h1 class="head">Home</h1>
-        <p>Welcome to Timothy's Portfolio. This websites showcases some of the things I have done and also some other things I like.</p><br>
-        <center><a class="button" href="rockclimbing.html">Rock Climbing</a></center>
-        <p>See my rock climbing stats!</p>
-        <center><a class="button" href="shortcuts.html">Shortcuts</a></center>
-        <p>See the weird automations I made that don't really help with everyday life.</p>
+        <p>Welcome to Timothy's Portfolio. This websites showcases some of the things I have done in html and minecraft. A little while back I created many pages covering the many things I did. However it became too much to handle, so I simplified a lot.</p><br>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
