--- a/ifttt-trigger.html
+++ b/ifttt-trigger.html
@@ -4,4 +4,6 @@
 function triggerIFTTT(){
 $.ajax({url:"https://maker.ifttt.com/trigger/discord_dank-memer_8ball-yes/with/key/2k9jEQj9B-IOrYMOwWSAG",success: function(result){alert(result)}})
 }
+<body>
 <button onclick="triggerIFTTT">Trigger IFTTT</button>
+</body>
