--- a/ifttt-trigger.html
+++ b/ifttt-trigger.html
@@ -5,5 +5,5 @@ function triggerIFTTT(){
 $.ajax({url:"https://maker.ifttt.com/trigger/discord_dank-memer_8ball-yes/with/key/2k9jEQj9B-IOrYMOwWSAG",success: function(result){alert(result)}})
 }
 <body>
-<button onclick="triggerIFTTT">Trigger IFTTT</button>
+<button onclick="triggerIFTTT">trigger IFTTT</button>
 </body>
